--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,21 +8,33 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-        <title>Login System in Node.js Express</title>
+        <title>Facebook Copy Dashboard</title>
     </head>
     <body>
 
         <div class="container">
-            <h1 class="mt-5 mb-5 text-center text-primary"><b>Login System in Node.js Express</b></h1>
+            <h1 class="mt-5 mb-5 text-center text-primary"><b>Facebook Copy Dashboard</b></h1>
 
             <div class="row mt-5">
                 <div class="col-md-3">&nbsp;</div>
                 <div class="col-md-6">
                 <% if(session.user_id) { %>
 
-                    <h1>Hi User, Welcome</h1>
+                            <form method="post" action="/editdomain">
+                                <div class="mb-3">
+                                    <label>Prevous Domain</label>
+                                    <input type="text" name="prev_domain" class="form-control" />
+                                </div>
+                                <div class="mb-3">
+                                    <label>New Domain</label>
+                                    <input type="text" name="new_domain" class="form-control" />
+                                </div>
+                                <div class="mb-3">
+                                    <input type="submit" class="btn btn-primary" value="Submit" />
+                                </div>
+                            </form>
 
-                    <a href="/logout" class="btn btn-primary">Logout</a>
+                        </br><a href="/logout" class="btn btn-primary">Logout</a>
 
                 <% } else { %>
 
@@ -32,11 +44,11 @@
                             <form method="post" action="/login">
                                 <div class="mb-3">
                                     <label>Email Address</label>
-                                    <input type="email" name="user_email_address" class="form-control" />
+                                    <input type="text" name="customer_email" class="form-control" />
                                 </div>
                                 <div class="mb-3">
                                     <label>Password</label>
-                                    <input type="password" name="user_password" class="form-control" />
+                                    <input type="password" name="licence_key" class="form-control" />
                                 </div>
                                 <div class="mb-3">
                                     <input type="submit" class="btn btn-primary" value="Login" />
